--- a/sample/src/main/res/layout/activity_maps.xml
+++ b/sample/src/main/res/layout/activity_maps.xml
@@ -4,4 +4,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sharewire.googlemapsclustering.sample.MapsActivity" />
+    tools:context="com.brezinajn.googlemapsclustering.sample.cz.brezinajn.googlemapsclustering.sample.MapsActivity" />
